--- a/TemplateSpartaneApp/TemplateSpartaneApp/Views/Popups/AlertProductosPopup.xaml
+++ b/TemplateSpartaneApp/TemplateSpartaneApp/Views/Popups/AlertProductosPopup.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <popup:PopupPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                  xmlns:popup="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
-             x:Class="TemplateSpartaneApp.Views.Popups.AlertProductosPopup">
+                 x:Class="TemplateSpartaneApp.Views.Popups.AlertProductosPopup">
     <StackLayout Margin="20">
-        <Frame BackgroundColor="white" 
+        <Frame BackgroundColor="white"
                VerticalOptions="CenterAndExpand"
                CornerRadius="6">
             <StackLayout>
@@ -28,7 +28,7 @@
 
                 <Button Command="{Binding CloseCommand}"
                         Margin="0,30,0,0"
-                        Text="Regresar"
+                        Text="Enterado"
                         BackgroundColor="Black"
                         TextColor="White"
                         HorizontalOptions="Fill"
